Keyboard fix, endret notify text.

--- a/WorkHours/res/layout/activity_login.xml
+++ b/WorkHours/res/layout/activity_login.xml
@@ -26,14 +26,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="80"
             android:orientation="vertical" >
-
+            
             <EditText
                 android:id="@+id/login_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/hint_email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress" >
+
+                <requestFocus />
+            </EditText>
 
             <EditText
                 android:id="@+id/login_password"
